--- a/wiki/.gitignore
+++ b/wiki/.gitignore
@@ -12,6 +12,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+package-lock.json*
+package.json*
 
 # Editor directories and files
 .idea
